--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
         <div class="takes-two-section">
             <div class="container">
                 <div class="row abs2">
-                    <div class="col-4">
+                    <div class="col-lg-4 col-md-12 col-sm-12 col-12">
                         <div class="row">
                             <div class="col-12">
                                 <img src="./playstation/img/it-takes-two-logo.png" alt="">
